Consolidated headers into chess.h moved enums and errors in chess.constructs. Updated Makefile.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,8 @@
 SRC=$(wildcard *.c)
+LIBS="ncurses"
 
 release: $(SRC)
-	gcc -o chess $(SRC) 
+	gcc -o chess $(SRC) -l$(LIBS)
 
 reference:
 	gcc -o chess main.c chess_state.c memory.c
