Seperated viewing functions into chess view object. Chess state now acts upon chess view.

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,5 @@ LIBS="ncurses"
 release: $(SRC)
 	gcc -o chess $(SRC) -l$(LIBS)
 
-reference:
-	gcc -o chess main.c chess_state.c memory.c
-debug:
-	gcc -m32 -Os -s -o chess main.c chess_state.c memory.c
+debug: $(SRC)
+	gcc -g -o chess $(SRC) -l$(LIBS)
