Moved chess constructs into seperate file. Fixed chess graphics.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,13 @@
 SRC=$(wildcard *.c)
 LIBS=ncurses
 
-OUTPUT=$2
+OUTPUT=pawn
 
 release: $(SRC)
 	gcc -O3 -o $(OUTPUT) $(SRC) -l$(LIBS)
 
 debug: $(SRC)
 	gcc -g -o $(OUTPUT) $(SRC) -l$(LIBS)
+
+clean:
+	rm $(OUTPUT)
